buildscript {
   repositories { 
      mavenLocal() 
      mavenCentral()
      jcenter()
   }
}

plugins { 
   id 'io.franzbecker.gradle-lombok' version '1.14'
   id "io.spring.dependency-management" version "1.0.7.RELEASE" 
   id "com.github.kt3k.coveralls" version "2.8.1" 
   id "org.owasp.dependencycheck" version "3.1.2"
   id "org.ajoberstar.grgit" version "2.0.1"
   id "com.jfrog.bintray" version "1.7.3"
}

ext { springBootVersion = '2.1.4.RELEASE' }

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'maven'
apply plugin: 'jacoco'

group = 'edu.kit.datamanager'
version = '0.1'

description = """Base service module containing entities, interfaces and helpers."""

sourceCompatibility = 1.8
targetCompatibility = 1.8

jar {
   baseName = 'service-base'
   version =  '0.1'
}

repositories {
   mavenLocal()   
   mavenCentral()
   jcenter()
}

dependencies {
   compile("org.springframework.boot:spring-boot-starter-amqp")
   compile("org.springframework.boot:spring-boot-starter-web")
   compile("org.springframework.boot:spring-boot-starter-security")
   compile("org.springframework.boot:spring-boot-starter-actuator")
   compile("org.springframework.boot:spring-boot-starter-data-jpa")
   
   compile("io.springfox:springfox-swagger2:2.9.0")

   compile("com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.1")
   compile("com.fasterxml.jackson.module:jackson-module-afterburner:2.7.1")
   compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.5")
   compile("com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.0")
   
   compile("net.sf.dozer:dozer:5.5.1")

   compile("io.jsonwebtoken:jjwt:0.9.0")

   compile("com.github.fge:json-patch:1.9")
   
   compile("org.apache.commons:commons-lang3:3.6")
   compile("commons-validator:commons-validator:1.6")
   compile("commons-io:commons-io:2.5")
   compile('org.apache.httpcomponents:httpclient:4.5.6')
   compile('commons-codec:commons-codec:1.7')
   compile('org.javers:javers-spring-boot-starter-sql:5.3.2')
   //compile("dnsjava:dnsjava:2.1.8")
     
   compile("org.apache.commons:commons-collections4:4.1")
   
   compile("org.slf4j:slf4j-api:1.7.25")
   compile("ch.qos.logback:logback-classic:1.2.3")

   //Java 11 Support 
   compile('javax.xml.bind:jaxb-api:2.2.11')
   compile('com.sun.xml.bind:jaxb-core:2.2.11')
   compile('com.sun.xml.bind:jaxb-impl:2.2.11')
   compile('javax.activation:activation:1.1.1')
   compile('org.javassist:javassist:3.23.1-GA')
   testCompile("org.springframework.boot:spring-boot-starter-test")
   testCompile("junit:junit:4.12")
   testCompile("org.mockito:mockito-core:2.23.4")
   testCompile("org.powermock:powermock-module-junit4:2.0.2")
   testCompile("org.powermock:powermock-api-mockito2:2.0.2")
}

lombok {
   version = '1.18.4'
   sha256 = ""
}

jacoco {
   toolVersion = "0.8.2"
}

tasks.withType(Test) {
   testLogging {
      events 'started', 'passed'
   }
}
jacocoTestReport {
   reports {
      xml.enabled true
      html.enabled true
   }
   afterEvaluate {
      //exclude some classes/package from code coverage report
      classDirectories = files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [\
                      //pure entity package currently not needed
            'org/datacite/**', \
                   'org/purl/**', \
                  //performance tests
            'edu/kit/datamanager/perf/**', \
                  //remove AuthenticationHelper tests due to mocking -> code coverage cannot be determined
                  //'edu/kit/datamanager/util/AuthenticationHelper*',
                  //deprecated stuff
            'edu/kit/datamanager/util/DCTransformationHelper*',
                  'edu/kit/datamanager/dao/ByExampleSpecification*',
                  'edu/kit/datamanager/controller/hateoas/**',
                  //exceptions 
            'edu/kit/datamanager/exceptions/**',
                  'edu/kit/datamanager/service/impl/RabbitMQMessagingService*',
                  'edu/kit/datamanager/configuration/**',
                  'edu/kit/datamanager/service/IGenericService*'
               ])
         })
   }
}

dependencyManagement {
   imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
}

if (JavaVersion.current().isJava8Compatible()) {
   allprojects {
      tasks.withType(Javadoc) {
         options.addStringOption('Xdoclint:none', '-quiet')
      }
   }
}